@@ -14,6 +14,7 @@
 	- add new fully recursive macro.c
 
 2.5.3 -> 2.5.4:
+	- non-zero exit status for verify failures.
 	- hpux does setreuid differently (Hermann Lauer).
 	- check for setreuid portably (Eugene Kanter).
 	- add Serbian translation (Zoltan Csala <zcsala@iname.com>).
